<resources>
    <string name="app_name">vocabulary</string>

    <string name="action_setting">设置</string>
    <string name="action_refresh">刷新</string>
    <string name="action_category_add">添加</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="phone_number_text">手机号</string>
    <string name="phone_number_hint">请输入您的手机号</string>
    <string name="check_code_text">验证码</string>
    <string name="get_check_code_button_text">获取验证码</string>

    <string name="register_button_text">注册</string>
    <string name="login_button_text">登录</string>

    <string name="bottom_menu_category">广场</string>
    <string name="bottom_menu_collection">收藏</string>
    <string name="bottom_menu_mine">我的</string>

    <string name="mine_login_register_text">登录/注册</string>

    <string name="network_not_connected">暂无网络连接，请检查您的网络设置</string>

    <string name="request_check_code_message">短信验证码已发送</string>
    <string name="request_check_code_error">获取验证码失败</string>

    <string name="request_error">请求服务失败，可能原因：网络不可用或者服务器不可用</string>

    <string name="request_login_error">登录失败</string>

    <string name="parse_data_error">服务器数据错误</string>
    <string name="parse_register_date_error">注册时间错误</string>


    <string name="category_edit_name_text">名称</string>
    <string name="category_edit_image_text">图片</string>

    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.test Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>

</resources>
