<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phone_number_text"
            android:gravity="center"/>

        <EditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/phone_check_code_margin"
            android:singleLine="true"
            android:inputType="number"
            android:imeOptions="actionNext"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/check_code_text"
            android:gravity="center"/>

        <EditText
            android:id="@+id/check_code_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/phone_check_code_margin"
            android:singleLine="true"
            android:inputType="number"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/check_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_check_code_button_text"
            android:layout_marginLeft="@dimen/phone_check_code_margin"/>

    </LinearLayout>
</LinearLayout>